--- a/style.css
+++ b/style.css
@@ -25,3 +25,33 @@ ol{
 	padding: 0;
 }
 
+table{
+	margin-top: 20px;
+	text-align: center;
+	border-collapse: collapse;
+	border-spacing: 0;
+	display: none;
+}
+
+#closetable{
+	display: none;
+	margin-top: 15px;
+}
+
+#customers td, #customers th {
+	border: 1px solid #ddd;
+	padding: 8px;
+}
+  
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+	padding-top: 12px;
+	padding-bottom: 12px;
+	text-align: left;
+	background-color: #2e3e2e;
+	color: white;
+}
+
